--- a/jquery-impromptu.css
+++ b/jquery-impromptu.css
@@ -33,30 +33,6 @@ div.jqi .jqiclose{
 div.jqi .jqistate{
 	background-color: #fff;
 }
-div.jqi .jqiparentstate::after{ 
-	background-color: #eee;
-	opacity: 0.7;
-	filter: alpha(opacity=70);
-	content: '';
-	position: absolute;
-	top:0;left:0;bottom:0;right:0;
-	border-radius: 6px;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-}
-div.jqi .jqisubstate{ 
-
-	position: absolute;
-	top:0;
-	left: 20%;
-	width: 60%;
-	padding: 7px;
-	border: solid 1px #eeeeee;
-	border-top: none;
-	border-radius: 0 0 6px 6px;
-	-moz-border-radius: 0 0 6px 6px;
-	-webkit-border-radius: 0 0 6px 6px;
-}
 div.jqi .jqititle{
 	padding: 5px 10px;
 	font-size: 16px; 
@@ -70,29 +46,65 @@ div.jqi .jqimessage{
 }
 div.jqi .jqibuttons{ 
 	text-align: right; 
-	padding: 5px 0 5px 0; 
-	border: solid 1px #eeeeee; 
+	margin: 0 -7px -7px -7px;
+	border-top: solid 1px #e4e4e4; 
 	background-color: #f4f4f4;
+	border-radius: 0 0 6px 6px;
+	-moz-border-radius: 0 0 6px 6px;
+	-webkit-border-radius: 0 0 6px 6px;
 }
-div.jqi button{ 
-	padding: 3px 10px; 
-	margin: 0 10px; 
-	background-color: #2F6073; 
-	border: solid 1px #f4f4f4; 
-	color: #ffffff; 
+div.jqi .jqibuttons button{ 
+	margin: 0;
+	padding: 15px 20px;
+	background-color: transparent;
+	font-weight: normal; 
+	border: none;
+	border-left: solid 1px #e4e4e4; 
+	color: #777; 
 	font-weight: bold; 
 	font-size: 12px; 
 }
-div.jqi button:hover{ 
-	background-color: #728A8C;
+div.jqi .jqibuttons button.jqidefaultbutton{
+	color: #489afe;
 }
-div.jqi button.jqidefaultbutton{
-	background-color: #BF5E26;
+div.jqi .jqibuttons button:hover,
+div.jqi .jqibuttons button:focus{
+	color: #287ade;
+	outline: none;
 }
 .jqiwarning .jqi .jqibuttons{ 
-	background-color: #BF5E26;
+	background-color: #b95656;
 }
 
+/* sub states */
+div.jqi .jqiparentstate::after{ 
+	background-color: #777;
+	opacity: 0.6;
+	filter: alpha(opacity=60);
+	content: '';
+	position: absolute;
+	top:0;left:0;bottom:0;right:0;
+	border-radius: 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+}
+div.jqi .jqisubstate{
+	position: absolute;
+	top:0;
+	left: 20%;
+	width: 60%;
+	padding: 7px;
+	border: solid 1px #eeeeee;
+	border-top: none;
+	border-radius: 0 0 6px 6px;
+	-moz-border-radius: 0 0 6px 6px;
+	-webkit-border-radius: 0 0 6px 6px;
+}
+div.jqi .jqisubstate .jqibuttons button{
+	padding: 10px 18px;
+}
+
+/* arrows for tooltips/tours */
 .jqi .jqiarrow{ position: absolute; height: 0; width:0; line-height: 0; font-size: 0; border: solid 10px transparent;}
 
 .jqi .jqiarrowtl{ left: 10px; top: -20px; border-bottom-color: #ffffff; }
