--- a/src/jquery-impromptu.css
+++ b/src/jquery-impromptu.css
@@ -3,7 +3,8 @@
 	background-color: #777777; 
 }
 div.jqi{ 
-	width: 400px; 
+	width: 400px;
+	max-width:90%;
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif; 
 	position: absolute; 
 	background-color: #ffffff; 
