Applies pull #29 - fix for smaller screens to act responsive

--- a/src/jquery-impromptu.css
+++ b/src/jquery-impromptu.css
@@ -4,6 +4,7 @@
 }
 div.jqi{ 
 	width: 400px; 
+	max-width:90%;
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif; 
 	position: absolute; 
 	background-color: #ffffff; 
