--- a/src/jquery-impromptu.css
+++ b/src/jquery-impromptu.css
@@ -4,6 +4,7 @@
 }
 div.jqi{ 
 	width: 400px; 
+	min-width: 400px;
 	max-width:90%;
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif; 
 	position: absolute; 
@@ -39,6 +40,7 @@ div.jqi .jqimessage{
 	padding: 10px; 
 	line-height: 20px; 
 	color: #444444; 
+	overflow: auto;
 }
 div.jqi .jqibuttons{ 
 	text-align: right; 
