--- a/src/jquery-impromptu.css
+++ b/src/jquery-impromptu.css
@@ -2,6 +2,10 @@
 	position: absolute; 
 	background-color: #777777; 
 }
+iframe.jqifade{
+	display:block;
+	z-index:-1;
+}
 div.jqi{ 
 	width: 400px; 
 	max-width:90%;
@@ -28,6 +32,7 @@ div.jqi .jqiclose{
 }
 div.jqi .jqistate{
 	background-color: #fff;
+	display: none;
 }
 div.jqi .jqititle{
 	padding: 5px 10px;
@@ -41,6 +46,9 @@ div.jqi .jqimessage{
 	color: #444444; 
 	overflow: auto;
 }
+div.jqi .jqibuttonshide{
+	display: none;
+} 
 div.jqi .jqibuttons{ 
 	text-align: right; 
 	margin: 0 -7px -7px -7px;
